<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Makanan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="124dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="48dp"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/img_back"
            android:onClick="pindah_main"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/makanan"
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/goodkids"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/makanan"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/corner"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/icon_makanan"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nama_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:font="@font/goodkids"
            android:fontFamily="@font/janturtype"
            android:gravity="center"
            android:text="@string/random_makanan"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cari_makanan"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/goodkids"
            android:text="@string/click_makanan"
            android:textSize="34sp"
            android:background="@drawable/button_costum1"/>
    </LinearLayout>

</LinearLayout>